# python-tilores-sdk

./: .envrc.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: convertmodel_test.py  helpers_test.py  integration_test.py  tilores_api_test.py
tests/fixtures/: complex_schema.graphql  integration.graphql  integration.jsonl  schema.graphql
tilores/: __init__.py  conversion.py  helpers.py  record_insights.py  tilores_api.py
